--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,7 +65,7 @@ button:focus {
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
   .dark {
-    --background: 0 0% 3.9%;
+    --background: rgb(22, 22, 24);
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
